--- a/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -8,18 +8,17 @@
 <partial name="PartialViews/_TitleCardPartial" />
 
 <!-- Button trigger modal -->
-<h3 class="text-center mt-5">What type of quote do you wish to upload:</h3>
-<div class="d-flex justify-content-around my-5">
-    <button type="button" class="btn button btn-lg py-3" data-bs-toggle="modal" data-bs-target="#movieModal">
-        <strong>Movie Quote</strong><i class="fa-solid fa-film ms-2 fa-xl"></i>
+<div class="uploadQuoteBtnsContainer">
+    <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#movieModal">
+        <strong>Movie Quote</strong><i class="fa-solid fa-film ms-3 fa-xl"></i>
     </button>
 
     <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#bookModal">
-        <strong>Book Quote</strong><i class="fa-solid fa-book ms-2 fa-xl"></i>
+        <strong>Book Quote</strong><i class="fa-solid fa-book ms-3 fa-xl"></i>
     </button>
 
     <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#otherModal">
-        <strong>General Quote</strong><i class="fa-solid fa-user-pen ms-2 fa-xl"></i>
+        <strong>General Quote</strong><i class="fa-solid fa-user-pen ms-3 fa-xl"></i>
     </button>
 </div>
 
@@ -29,12 +28,12 @@
     <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Upload Movie Quote</h1>
-                <button class="btn-modal-close" type="button" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
+                <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Movie Quote</h1>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
-            <div class="modal-body d-flex justify-content-center">
+            <div class="modal-body uploadQuoteModalContainer">
                 <img class="col-4" src="~/images/movieQuote.jpg" />
-                <form method="post" asp-controller="Quote" asp-action="UploadMovieQuote" class="col-8 mx-auto d-flex justify-content-center flex-column ps-4">
+                <form method="post" asp-controller="Quote" asp-action="UploadMovieQuote">
                     <div class="form-group fs-4">
                         <label asp-for="@Model.MovieQuoteModel.Content">Content*</label>
                         <textarea asp-for="@Model.MovieQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
@@ -46,7 +45,9 @@
                         <span asp-validation-for="@Model.MovieQuoteModel.MovieTitle" class="small text-danger"></span>
                     </div>
                     <div class="text-center mt-4 mb-5">
-                        <button type="submit" class="fs-5 btn button text-center form-button"><strong>Upload Quote<i class="ms-2 fas fa-upload icon"></i></strong></button>
+                        <button type="submit" class="btn button form-button">
+                            <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
+                        </button>
                     </div>
                 </form>
             </div>
@@ -59,29 +60,31 @@
     <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Upload Book Quote</h1>
-                <button class="btn-modal-close" type="button" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
+                <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Book Quote</h1>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
-            <div class="modal-body d-flex justify-content-center">
-                <img class="col-4" src="~/images/bookQuote.jpg" />
-                <form method="post" asp-controller="Quote" asp-action="UploadBookQuote" class="col-8 mx-auto d-flex justify-content-center flex-column ps-4">
-                    <div class="form-group fs-4">
+            <div class="modal-body uploadQuoteModalContainer">
+                <img class="img-fluid" src="~/images/bookQuote.jpg" />
+                <form method="post" asp-controller="Quote" asp-action="UploadBookQuote">
+                    <div class="form-group">
                         <label asp-for="@Model.BookQuoteModel.Content">Content*</label>
                         <textarea asp-for="@Model.BookQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
                         <span asp-validation-for="@Model.BookQuoteModel.Content" class="small text-danger"></span>
                     </div>
-                    <div class="form-group mt-4 fs-4">
+                    <div class="form-group mt-4">
                         <label asp-for="@Model.BookQuoteModel.BookTitle">Book Title*</label>
                         <input asp-for="@Model.BookQuoteModel.BookTitle" type="text" class="form-control border border-2 fs-5">
                         <span asp-validation-for="@Model.BookQuoteModel.BookTitle" class="small text-danger"></span>
                     </div>
-                    <div class="form-group mt-4 fs-4">
+                    <div class="form-group mt-4">
                         <label asp-for="@Model.BookQuoteModel.AuthorName">Author's Name*</label>
                         <input asp-for="@Model.BookQuoteModel.AuthorName" type="text" class="form-control border border-2 fs-5">
                         <span asp-validation-for="@Model.BookQuoteModel.AuthorName" class="small text-danger"></span>
                     </div>
                     <div class="text-center mt-4 mb-5">
-                        <button type="submit" class="fs-5 btn button text-center form-button"><strong>Upload Quote<i class="ms-2 fas fa-upload icon"></i></strong></button>
+                        <button type="submit" class="btn button form-button">
+                            <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
+                        </button>
                     </div>
                 </form>
             </div>
@@ -94,12 +97,12 @@
     <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Upload General Quote</h1>
-                <button class="btn-modal-close" type="button" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
+                <h1 class="modal-title fs-4" id="exampleModalLabel">Upload General Quote</h1>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
-            <div class="modal-body d-flex align-items-stretch">
+            <div class="modal-body uploadQuoteModalContainer">
                 <img class="col-4" src="~/images/generalQuote.jpg" />
-                <form method="post" asp-controller="Quote" asp-action="UploadGeneralQuote" class="col-8 mx-auto d-flex justify-content-center flex-column px-4">
+                <form method="post" asp-controller="Quote" asp-action="UploadGeneralQuote">
                     <div class="form-group fs-4">
                         <label asp-for="GeneralQuoteModel.Content">Content*</label>
                         <textarea asp-for="GeneralQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
@@ -111,7 +114,9 @@
                         <span asp-validation-for="GeneralQuoteModel.AuthorName" class="small text-danger"></span>
                     </div>
                     <div class="text-center mt-4 mb-5">
-                        <button type="submit" class="fs-5 btn button text-center form-button"><strong>Upload Quote<i class="ms-2 fas fa-upload icon"></i></strong></button>
+                        <button type="submit" class="btn button form-button">
+                            <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
+                        </button>
                     </div>
                 </form>
             </div>
