--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_TitleCardPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_TitleCardPartial.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-flex justify-content-center mt-5">
-    <div class="card text-center title-card">
+    <div class="card text-center title-card border-2 border-dark">
         <div class="card-body">
             @if (count != null)
             {
