--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -55,7 +55,7 @@
             <!-- Brand Logo -->
             <a asp-area="" asp-controller="Home" asp-action="Index" class="brand-link">
                  <img src="/favicon.ico" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8"> 
-                <span class="brand-text font-weight-light">BookWorm</span>
+                <span class="brand-text font-weight-light">Bookworm</span>
             </a>
 
             <!-- Sidebar -->
