--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -24,8 +24,9 @@ else
     </div>
 
     <partial name="PartialViews/_QuotesTypeFilterPartial" />
+    <partial name="PartialViews/_QuotesSearchPartial" />
 
-    <div class="input-group">
+    @* <div class="input-group">
         <input type="text"
                class="form-control border border-2 border-black"
                id="searchQuotesInput"
@@ -37,7 +38,7 @@ else
                 id="searchQuotesBtn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
-    </div>
+    </div> *@
 
     <div class="table-responsive my-3">
         <table class="table table-bordered">
