--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_QuotesTypeFilterPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_QuotesTypeFilterPartial.cshtml
@@ -1,15 +1,15 @@
 ﻿<div class="btn-group my-3 mb-3 d-flex justify-content-center"
      role="group"
      aria-label="Basic radio toggle button group">
-    <input type="radio" class="btn-check" name="btnradio" id="movieQuotesRadio" autocomplete="off">
-    <label class="btn border-2 border-dark" for="movieQuotesRadio">Show only movie quotes</label>
+    <input type="radio" class="btn-check" name="btnradio" id="movie-quotes" autocomplete="off">
+    <label class="btn border-2 border-dark fs-5" for="movie-quotes">Show only movie quotes</label>
 
-    <input type="radio" class="btn-check" name="btnradio" id="bookQuotesRadio" autocomplete="off">
-    <label class="btn border-dark border-2" for="bookQuotesRadio">Show only book quotes</label>
+    <input type="radio" class="btn-check" name="btnradio" id="book-quotes" autocomplete="off">
+    <label class="btn border-dark border-2 fs-5" for="book-quotes">Show only book quotes</label>
 
-    <input type="radio" class="btn-check" name="btnradio" id="generalQuotesRadio" autocomplete="off">
-    <label class="btn border-dark border-2" for="generalQuotesRadio">Show only general quotes</label>
+    <input type="radio" class="btn-check" name="btnradio" id="general-quotes" autocomplete="off">
+    <label class="btn border-dark border-2 fs-5" for="general-quotes">Show only general quotes</label>
 
-    <input type="radio" class="btn-check" name="btnradio" id="likedQuotesRadio" autocomplete="off">
-    <label class="btn border-dark border-2" for="likedQuotesRadio">Show only liked quotes</label>
+    <input type="radio" class="btn-check" name="btnradio" id="liked-quotes" autocomplete="off">
+    <label class="btn border-dark border-2 fs-5" for="liked-quotes">Show only liked quotes</label>
 </div>
