Add simple quotes pagination

--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
@@ -12,7 +12,7 @@ else
 {
     <h3 class="text-center pt-5">Manage unapproved quotes!</h3>
     
-        <table class="table table-striped table-dark table-bordered table-responsive" id="dataTable">
+        <table class="table table-striped table-dark table-bordered table-hover" id="dataTable">
             <thead>
                 <tr>
                     <th scope="col">#</th>
