Update retrieve quote logic and Api quote controller

--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -7,7 +7,7 @@
 
 @{
     this.ViewData["Title"] = "All Quotes";
-    this.ViewData["Count"] = Model.Quotes.Count;
+    this.ViewData["Count"] = Model.RecordsCount;
     string requestToken = Antiforgery.GetAndStoreTokens(Context).RequestToken;
 }
 
